Ismail: #Bugfix: Candidate Profile tab - Skills wrapped

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -267,5 +267,9 @@ textarea {
 }
 .interviewDetails .row, .interviewDetails .col { padding: 0; }
 .interviewDetails .col + .col h5 { font-weight: normal; }
+.interviewDetails .item h5 {
+  word-wrap: break-word;
+  white-space: normal;
+}
 
 /* .pane[hide-nav-bar=true] .has-tabs-top.ic-blk { bottom: auto; top: 0; -webkit-overflow-scrolling: touch; } */
